--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 3:16:38 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 3:17:31 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -140,36 +140,52 @@ body {
   </thead>
   <tbody>
     <tr>
-      <td class="bigbold">Larry Judge</td>
-      <td class="bigbold">-6</td>
-      <td>Cameron Smith -3
--3 thru 13</td>
-      <td>Scottie Scheffler(W) -2
--2 thru 10</td>
-      <td>Sam Burns -1
--1 thru 3</td>
-      <td>Xander Schauffele E
-E thru 1</td>
-      <td class="greyout leftborder">Jordan Spieth E
-E thru 1</td>
-      <td class="greyout">Corey Conners E
-E thru 7</td>
-    </tr>
-    <tr>
       <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-5</td>
+      <td class="bigbold">-7</td>
       <td>Cameron Smith -3
 -3 thru 13</td>
-      <td>Joaquin Niemann -2
--2 thru 12</td>
-      <td>Viktor Hovland E
-E thru 1</td>
+      <td>Joaquin Niemann -3
+-3 thru 13</td>
+      <td>Viktor Hovland -1
+-1 thru 2</td>
       <td>Rory McIlroy E
 E thru 1</td>
       <td class="greyout leftborder">Justin Thomas +2
 +2 thru 12</td>
       <td class="greyout">Tommy Fleetwood(W) +3
 +3 thru 14</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Larry Judge</td>
+      <td class="bigbold">-5</td>
+      <td>Cameron Smith -3
+-3 thru 13</td>
+      <td>Scottie Scheffler(W) -2
+-2 thru 10</td>
+      <td>Xander Schauffele E
+E thru 2</td>
+      <td>Sam Burns E
+E thru 4</td>
+      <td class="greyout leftborder">Jordan Spieth E
+E thru 1</td>
+      <td class="greyout">Corey Conners E
+E thru 7</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Scott Williamson</td>
+      <td class="bigbold">-4</td>
+      <td>Sungjae Im -3
+-3 thru 5</td>
+      <td>Viktor Hovland(W) -1
+-1 thru 2</td>
+      <td>Brooks Koepka E
+E thru 1</td>
+      <td>Patrick Cantlay E
+E thru 2</td>
+      <td class="greyout leftborder">Collin Morikawa +1
++1 thru 3</td>
+      <td class="greyout">Justin Thomas +2
++2 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
@@ -188,18 +204,34 @@ E thru 2</td>
 +2 thru 12</td>
     </tr>
     <tr>
-      <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">-3</td>
-      <td>Sungjae Im -3
--3 thru 5</td>
-      <td>Viktor Hovland(W) E
-E thru 1</td>
-      <td>Brooks Koepka E
-E thru 1</td>
-      <td>Patrick Cantlay E
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">-4</td>
+      <td>Daniel Berger -3
+-3 thru 14</td>
+      <td>Robert MacIntyre -1
+-1 thru 9</td>
+      <td>Corey Conners(W) E
+E thru 7</td>
+      <td>Jon Rahm E
 E thru 2</td>
-      <td class="greyout leftborder">Collin Morikawa +1
-+1 thru 2</td>
+      <td class="greyout leftborder">Jordan Spieth E
+E thru 1</td>
+      <td class="greyout">Collin Morikawa +1
++1 thru 3</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Neil Hardy</td>
+      <td class="bigbold">-4</td>
+      <td>Cameron Smith(W) -3
+-3 thru 13</td>
+      <td>Viktor Hovland -1
+-1 thru 2</td>
+      <td>Corey Conners E
+E thru 7</td>
+      <td>Xander Schauffele E
+E thru 2</td>
+      <td class="greyout leftborder">Jordan Spieth E
+E thru 1</td>
       <td class="greyout">Justin Thomas +2
 +2 thru 12</td>
     </tr>
@@ -236,74 +268,10 @@ E thru 1</td>
 E thru 2</td>
     </tr>
     <tr>
-      <td class="bigbold">John Nixon</td>
-      <td class="bigbold">-3</td>
-      <td>Cameron Smith(W) -3
--3 thru 13</td>
-      <td>Brooks Koepka E
-E thru 1</td>
-      <td>Xander Schauffele E
-E thru 1</td>
-      <td>Rory McIlroy E
-E thru 1</td>
-      <td class="greyout leftborder">Patrick Cantlay E
-E thru 2</td>
-      <td class="greyout">Collin Morikawa +1
-+1 thru 2</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">-3</td>
-      <td>Daniel Berger -2
--2 thru 13</td>
-      <td>Robert MacIntyre -1
--1 thru 8</td>
-      <td>Corey Conners(W) E
-E thru 7</td>
-      <td>Jon Rahm E
-E thru 2</td>
-      <td class="greyout leftborder">Jordan Spieth E
-E thru 1</td>
-      <td class="greyout">Collin Morikawa +1
-+1 thru 2</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-3</td>
-      <td>Cameron Smith(W) -3
--3 thru 13</td>
-      <td>Corey Conners E
-E thru 7</td>
-      <td>Viktor Hovland E
-E thru 1</td>
-      <td>Xander Schauffele E
-E thru 1</td>
-      <td class="greyout leftborder">Jordan Spieth E
-E thru 1</td>
-      <td class="greyout">Justin Thomas +2
-+2 thru 12</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Derrick Shea</td>
-      <td class="bigbold">-2</td>
-      <td>Tyrrell Hatton -1
--1 thru 3</td>
-      <td>Shane Lowry -1
--1 thru 14</td>
-      <td>Jon Rahm E
-E thru 2</td>
-      <td>Patrick Cantlay E
-E thru 2</td>
-      <td class="greyout leftborder">Corey Conners E
-E thru 7</td>
-      <td class="greyout">Justin Thomas(W) +2
-+2 thru 12</td>
-    </tr>
-    <tr>
       <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">-2</td>
-      <td>Daniel Berger -2
--2 thru 13</td>
+      <td class="bigbold">-3</td>
+      <td>Daniel Berger -3
+-3 thru 14</td>
       <td>Brooks Koepka E
 E thru 1</td>
       <td>Will Zalatoris E
@@ -311,25 +279,57 @@ E thru 2</td>
       <td>Tony Finau E
 E thru 11</td>
       <td class="greyout leftborder">Collin Morikawa +1
-+1 thru 2</td>
++1 thru 3</td>
       <td class="greyout">Justin Thomas(W) +2
 +2 thru 12</td>
     </tr>
     <tr>
+      <td class="bigbold">John Nixon</td>
+      <td class="bigbold">-3</td>
+      <td>Cameron Smith(W) -3
+-3 thru 13</td>
+      <td>Brooks Koepka E
+E thru 1</td>
+      <td>Xander Schauffele E
+E thru 2</td>
+      <td>Rory McIlroy E
+E thru 1</td>
+      <td class="greyout leftborder">Patrick Cantlay E
+E thru 2</td>
+      <td class="greyout">Collin Morikawa +1
++1 thru 3</td>
+    </tr>
+    <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">-1</td>
+      <td class="bigbold">-2</td>
+      <td>Viktor Hovland -1
+-1 thru 2</td>
       <td>Dustin Johnson -1
 -1 thru 3</td>
       <td>Jordan Spieth(W) E
 E thru 1</td>
       <td>Patrick Cantlay E
 E thru 2</td>
-      <td>Viktor Hovland E
-E thru 1</td>
       <td class="greyout leftborder">Brooks Koepka E
 E thru 1</td>
       <td class="greyout">Jon Rahm E
 E thru 2</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Derrick Shea</td>
+      <td class="bigbold">-1</td>
+      <td>Shane Lowry -1
+-1 thru 14</td>
+      <td>Jon Rahm E
+E thru 2</td>
+      <td>Patrick Cantlay E
+E thru 2</td>
+      <td>Tyrrell Hatton E
+E thru 4</td>
+      <td class="greyout leftborder">Corey Conners E
+E thru 7</td>
+      <td class="greyout">Justin Thomas(W) +2
++2 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
@@ -337,15 +337,31 @@ E thru 2</td>
       <td>Dustin Johnson -1
 -1 thru 3</td>
       <td>Xander Schauffele(W) E
-E thru 1</td>
+E thru 2</td>
       <td>Corey Conners E
 E thru 7</td>
       <td>Russell Henley +1
 +1 thru 7</td>
       <td class="greyout leftborder">Justin Thomas +2
 +2 thru 12</td>
-      <td class="greyout">Louis Oosthuizen +5
-+5 thru 12</td>
+      <td class="greyout">Louis Oosthuizen +4
++4 thru 13</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jeff Turnham</td>
+      <td class="bigbold">0</td>
+      <td>Viktor Hovland(W) -1
+-1 thru 2</td>
+      <td>Jon Rahm E
+E thru 2</td>
+      <td>Brooks Koepka E
+E thru 1</td>
+      <td>Collin Morikawa +1
++1 thru 3</td>
+      <td class="greyout leftborder">Patrick Reed +2
++2 thru 7</td>
+      <td class="greyout">Luke List +3
++3 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Adam Ryan</td>
@@ -353,15 +369,15 @@ E thru 7</td>
       <td>Jon Rahm E
 E thru 2</td>
       <td>Xander Schauffele E
-E thru 1</td>
+E thru 2</td>
       <td>Jordan Spieth E
 E thru 1</td>
       <td>Corey Conners E
 E thru 7</td>
       <td class="greyout leftborder">Justin Thomas(W) +2
 +2 thru 12</td>
-      <td class="greyout">Louis Oosthuizen +5
-+5 thru 12</td>
+      <td class="greyout">Louis Oosthuizen +4
++4 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
@@ -377,23 +393,7 @@ E thru 1</td>
       <td class="greyout leftborder">Tony Finau E
 E thru 11</td>
       <td class="greyout">Collin Morikawa +1
-+1 thru 2</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">1</td>
-      <td>Viktor Hovland(W) E
-E thru 1</td>
-      <td>Jon Rahm E
-E thru 2</td>
-      <td>Brooks Koepka E
-E thru 1</td>
-      <td>Collin Morikawa +1
-+1 thru 2</td>
-      <td class="greyout leftborder">Patrick Reed +1
-+1 thru 6</td>
-      <td class="greyout">Luke List +3
-+3 thru 16</td>
++1 thru 3</td>
     </tr>
   </tbody>
 </table>
