--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 3:21:05 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 3:21:59 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -139,6 +139,22 @@ body {
   </tr>
   </thead>
   <tbody>
+    <tr>
+      <td class="bigbold">Larry Judge</td>
+      <td class="bigbold">-7</td>
+      <td>Cameron Smith -3
+-3 thru 13</td>
+      <td>Scottie Scheffler(W) -2
+-2 thru 10</td>
+      <td>Jordan Spieth -1
+-1 thru 2</td>
+      <td>Corey Conners -1
+-1 thru 8</td>
+      <td class="greyout leftborder">Xander Schauffele E
+E thru 2</td>
+      <td class="greyout">Sam Burns E
+E thru 4</td>
+    </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
       <td class="bigbold">-7</td>
@@ -156,130 +172,98 @@ E thru 1</td>
 +3 thru 14</td>
     </tr>
     <tr>
-      <td class="bigbold">Larry Judge</td>
-      <td class="bigbold">-5</td>
-      <td>Cameron Smith -3
--3 thru 13</td>
-      <td>Scottie Scheffler(W) -2
--2 thru 10</td>
-      <td>Xander Schauffele E
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">-6</td>
+      <td>Daniel Berger -3
+-3 thru 14</td>
+      <td>Corey Conners(W) -1
+-1 thru 8</td>
+      <td>Jordan Spieth -1
+-1 thru 2</td>
+      <td>Robert MacIntyre -1
+-1 thru 9</td>
+      <td class="greyout leftborder">Jon Rahm E
 E thru 2</td>
-      <td>Sam Burns E
-E thru 4</td>
-      <td class="greyout leftborder">Jordan Spieth E
-E thru 1</td>
-      <td class="greyout">Corey Conners E
-E thru 7</td>
+      <td class="greyout">Collin Morikawa +1
++1 thru 4</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Neil Hardy</td>
+      <td class="bigbold">-6</td>
+      <td>Cameron Smith(W) -3
+-3 thru 13</td>
+      <td>Corey Conners -1
+-1 thru 8</td>
+      <td>Viktor Hovland -1
+-1 thru 2</td>
+      <td>Jordan Spieth -1
+-1 thru 2</td>
+      <td class="greyout leftborder">Xander Schauffele E
+E thru 2</td>
+      <td class="greyout">Justin Thomas +2
++2 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
       <td class="bigbold">-4</td>
       <td>Sungjae Im -3
--3 thru 5</td>
+-3 thru 6</td>
       <td>Viktor Hovland(W) -1
 -1 thru 2</td>
       <td>Brooks Koepka E
 E thru 1</td>
       <td>Patrick Cantlay E
-E thru 2</td>
+E thru 3</td>
       <td class="greyout leftborder">Collin Morikawa +1
-+1 thru 3</td>
++1 thru 4</td>
       <td class="greyout">Justin Thomas +2
 +2 thru 12</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Bryson</td>
+      <td class="bigbold">-4</td>
+      <td>Scottie Scheffler(W) -2
+-2 thru 10</td>
+      <td>Jordan Spieth -1
+-1 thru 2</td>
+      <td>Will Zalatoris -1
+-1 thru 3</td>
+      <td>Jon Rahm E
+E thru 2</td>
+      <td class="greyout leftborder">Brooks Koepka E
+E thru 1</td>
+      <td class="greyout">Shane Lowry +1
++1 thru 15</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
       <td class="bigbold">-4</td>
       <td>Cameron Smith -3
 -3 thru 13</td>
-      <td>Shane Lowry -1
--1 thru 14</td>
+      <td>Will Zalatoris -1
+-1 thru 3</td>
       <td>Matthew Fitzpatrick E
 E thru 1</td>
       <td>Brooks Koepka E
 E thru 1</td>
-      <td class="greyout leftborder">Will Zalatoris E
-E thru 2</td>
+      <td class="greyout leftborder">Shane Lowry +1
++1 thru 15</td>
       <td class="greyout">Justin Thomas(W) +2
 +2 thru 12</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">-4</td>
-      <td>Daniel Berger -3
--3 thru 14</td>
-      <td>Robert MacIntyre -1
--1 thru 9</td>
-      <td>Corey Conners(W) E
-E thru 7</td>
-      <td>Jon Rahm E
-E thru 2</td>
-      <td class="greyout leftborder">Jordan Spieth E
-E thru 1</td>
-      <td class="greyout">Collin Morikawa +1
-+1 thru 3</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-4</td>
-      <td>Cameron Smith(W) -3
--3 thru 13</td>
-      <td>Viktor Hovland -1
--1 thru 2</td>
-      <td>Corey Conners E
-E thru 7</td>
-      <td>Xander Schauffele E
-E thru 2</td>
-      <td class="greyout leftborder">Jordan Spieth E
-E thru 1</td>
-      <td class="greyout">Justin Thomas +2
-+2 thru 12</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-3</td>
-      <td>Scottie Scheffler -2
--2 thru 10</td>
-      <td>Shane Lowry -1
--1 thru 14</td>
-      <td>Patrick Cantlay E
-E thru 2</td>
-      <td>Will Zalatoris E
-E thru 2</td>
-      <td class="greyout leftborder">Tony Finau E
-E thru 11</td>
-      <td class="greyout">Justin Thomas(W) +2
-+2 thru 12</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">-3</td>
-      <td>Scottie Scheffler(W) -2
--2 thru 10</td>
-      <td>Shane Lowry -1
--1 thru 14</td>
-      <td>Jon Rahm E
-E thru 2</td>
-      <td>Brooks Koepka E
-E thru 1</td>
-      <td class="greyout leftborder">Jordan Spieth E
-E thru 1</td>
-      <td class="greyout">Will Zalatoris E
-E thru 2</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
       <td class="bigbold">-3</td>
       <td>Daniel Berger -3
 -3 thru 14</td>
+      <td>Will Zalatoris -1
+-1 thru 3</td>
       <td>Brooks Koepka E
 E thru 1</td>
-      <td>Will Zalatoris E
-E thru 2</td>
-      <td>Tony Finau E
-E thru 11</td>
-      <td class="greyout leftborder">Collin Morikawa +1
-+1 thru 3</td>
+      <td>Collin Morikawa +1
++1 thru 4</td>
+      <td class="greyout leftborder">Tony Finau +1
++1 thru 12</td>
       <td class="greyout">Justin Thomas(W) +2
 +2 thru 12</td>
     </tr>
@@ -295,57 +279,105 @@ E thru 2</td>
       <td>Rory McIlroy E
 E thru 1</td>
       <td class="greyout leftborder">Patrick Cantlay E
-E thru 2</td>
+E thru 3</td>
       <td class="greyout">Collin Morikawa +1
-+1 thru 3</td>
++1 thru 4</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">-2</td>
+      <td class="bigbold">-3</td>
+      <td>Jordan Spieth(W) -1
+-1 thru 2</td>
       <td>Viktor Hovland -1
 -1 thru 2</td>
       <td>Dustin Johnson -1
 -1 thru 3</td>
-      <td>Jordan Spieth(W) E
-E thru 1</td>
       <td>Patrick Cantlay E
-E thru 2</td>
+E thru 3</td>
       <td class="greyout leftborder">Brooks Koepka E
 E thru 1</td>
       <td class="greyout">Jon Rahm E
 E thru 2</td>
     </tr>
     <tr>
+      <td class="bigbold">Jon Hosegood</td>
+      <td class="bigbold">-2</td>
+      <td>Scottie Scheffler -2
+-2 thru 10</td>
+      <td>Will Zalatoris -1
+-1 thru 3</td>
+      <td>Patrick Cantlay E
+E thru 3</td>
+      <td>Tony Finau +1
++1 thru 12</td>
+      <td class="greyout leftborder">Shane Lowry +1
++1 thru 15</td>
+      <td class="greyout">Justin Thomas(W) +2
++2 thru 12</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Adam Ryan</td>
+      <td class="bigbold">-2</td>
+      <td>Jordan Spieth -1
+-1 thru 2</td>
+      <td>Corey Conners -1
+-1 thru 8</td>
+      <td>Jon Rahm E
+E thru 2</td>
+      <td>Xander Schauffele E
+E thru 2</td>
+      <td class="greyout leftborder">Justin Thomas(W) +2
++2 thru 12</td>
+      <td class="greyout">Louis Oosthuizen +4
++4 thru 13</td>
+    </tr>
+    <tr>
       <td class="bigbold">Derrick Shea</td>
       <td class="bigbold">-1</td>
-      <td>Shane Lowry -1
--1 thru 14</td>
+      <td>Corey Conners -1
+-1 thru 8</td>
       <td>Jon Rahm E
 E thru 2</td>
       <td>Patrick Cantlay E
-E thru 2</td>
+E thru 3</td>
       <td>Tyrrell Hatton E
 E thru 4</td>
-      <td class="greyout leftborder">Corey Conners E
-E thru 7</td>
+      <td class="greyout leftborder">Shane Lowry +1
++1 thru 15</td>
       <td class="greyout">Justin Thomas(W) +2
 +2 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
-      <td class="bigbold">0</td>
+      <td class="bigbold">-1</td>
       <td>Dustin Johnson -1
 -1 thru 3</td>
+      <td>Corey Conners -1
+-1 thru 8</td>
       <td>Xander Schauffele(W) E
 E thru 2</td>
-      <td>Corey Conners E
-E thru 7</td>
       <td>Russell Henley +1
 +1 thru 7</td>
       <td class="greyout leftborder">Justin Thomas +2
 +2 thru 12</td>
       <td class="greyout">Louis Oosthuizen +4
 +4 thru 13</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Shane Tummon</td>
+      <td class="bigbold">-1</td>
+      <td>Jordan Spieth -1
+-1 thru 2</td>
+      <td>Jon Rahm(W) E
+E thru 2</td>
+      <td>Patrick Cantlay E
+E thru 3</td>
+      <td>Brooks Koepka E
+E thru 1</td>
+      <td class="greyout leftborder">Collin Morikawa +1
++1 thru 4</td>
+      <td class="greyout">Tony Finau +1
++1 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
@@ -357,43 +389,11 @@ E thru 2</td>
       <td>Brooks Koepka E
 E thru 1</td>
       <td>Collin Morikawa +1
-+1 thru 3</td>
++1 thru 4</td>
       <td class="greyout leftborder">Patrick Reed +2
 +2 thru 7</td>
       <td class="greyout">Luke List +3
-+3 thru 16</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Adam Ryan</td>
-      <td class="bigbold">0</td>
-      <td>Jon Rahm E
-E thru 2</td>
-      <td>Xander Schauffele E
-E thru 2</td>
-      <td>Jordan Spieth E
-E thru 1</td>
-      <td>Corey Conners E
-E thru 7</td>
-      <td class="greyout leftborder">Justin Thomas(W) +2
-+2 thru 12</td>
-      <td class="greyout">Louis Oosthuizen +4
-+4 thru 13</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">0</td>
-      <td>Jon Rahm(W) E
-E thru 2</td>
-      <td>Jordan Spieth E
-E thru 1</td>
-      <td>Patrick Cantlay E
-E thru 2</td>
-      <td>Brooks Koepka E
-E thru 1</td>
-      <td class="greyout leftborder">Tony Finau E
-E thru 11</td>
-      <td class="greyout">Collin Morikawa +1
-+1 thru 3</td>
++3 thru 17</td>
     </tr>
   </tbody>
 </table>
