--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 3:26:24 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 3:27:19 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,31 +141,31 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Larry Judge</td>
-      <td class="bigbold">-7</td>
+      <td class="bigbold">-8</td>
+      <td>Scottie Scheffler(W) -3
+-3 thru 12</td>
       <td>Cameron Smith -3
 -3 thru 13</td>
-      <td>Scottie Scheffler(W) -2
--2 thru 10</td>
       <td>Jordan Spieth -1
 -1 thru 2</td>
       <td>Corey Conners -1
 -1 thru 8</td>
       <td class="greyout leftborder">Xander Schauffele E
 E thru 2</td>
-      <td class="greyout">Sam Burns E
-E thru 4</td>
+      <td class="greyout">Sam Burns +2
++2 thru 5</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-7</td>
+      <td class="bigbold">-8</td>
       <td>Cameron Smith -3
 -3 thru 13</td>
       <td>Joaquin Niemann -3
--3 thru 13</td>
+-3 thru 14</td>
       <td>Viktor Hovland -1
 -1 thru 2</td>
-      <td>Rory McIlroy E
-E thru 1</td>
+      <td>Rory McIlroy -1
+-1 thru 2</td>
       <td class="greyout leftborder">Justin Thomas +2
 +2 thru 12</td>
       <td class="greyout">Tommy Fleetwood(W) +3
@@ -183,7 +183,7 @@ E thru 1</td>
       <td>Robert MacIntyre -1
 -1 thru 9</td>
       <td class="greyout leftborder">Jon Rahm E
-E thru 2</td>
+E thru 3</td>
       <td class="greyout">Collin Morikawa +1
 +1 thru 4</td>
     </tr>
@@ -204,6 +204,38 @@ E thru 2</td>
 +2 thru 12</td>
     </tr>
     <tr>
+      <td class="bigbold">Chris Bryson</td>
+      <td class="bigbold">-5</td>
+      <td>Scottie Scheffler(W) -3
+-3 thru 12</td>
+      <td>Jordan Spieth -1
+-1 thru 2</td>
+      <td>Will Zalatoris -1
+-1 thru 3</td>
+      <td>Jon Rahm E
+E thru 3</td>
+      <td class="greyout leftborder">Brooks Koepka E
+E thru 2</td>
+      <td class="greyout">Shane Lowry +1
++1 thru 15</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Andrew Winchester</td>
+      <td class="bigbold">-5</td>
+      <td>Cameron Smith -3
+-3 thru 13</td>
+      <td>Matthew Fitzpatrick -1
+-1 thru 2</td>
+      <td>Will Zalatoris -1
+-1 thru 3</td>
+      <td>Brooks Koepka E
+E thru 2</td>
+      <td class="greyout leftborder">Shane Lowry +1
++1 thru 15</td>
+      <td class="greyout">Justin Thomas(W) +2
++2 thru 12</td>
+    </tr>
+    <tr>
       <td class="bigbold">Scott Williamson</td>
       <td class="bigbold">-4</td>
       <td>Sungjae Im -3
@@ -211,7 +243,7 @@ E thru 2</td>
       <td>Viktor Hovland(W) -1
 -1 thru 2</td>
       <td>Brooks Koepka E
-E thru 1</td>
+E thru 2</td>
       <td>Patrick Cantlay E
 E thru 3</td>
       <td class="greyout leftborder">Collin Morikawa +1
@@ -220,32 +252,32 @@ E thru 3</td>
 +2 thru 12</td>
     </tr>
     <tr>
-      <td class="bigbold">Chris Bryson</td>
+      <td class="bigbold">John Nixon</td>
       <td class="bigbold">-4</td>
-      <td>Scottie Scheffler(W) -2
--2 thru 10</td>
-      <td>Jordan Spieth -1
+      <td>Cameron Smith(W) -3
+-3 thru 13</td>
+      <td>Rory McIlroy -1
 -1 thru 2</td>
-      <td>Will Zalatoris -1
--1 thru 3</td>
-      <td>Jon Rahm E
+      <td>Brooks Koepka E
 E thru 2</td>
-      <td class="greyout leftborder">Brooks Koepka E
-E thru 1</td>
-      <td class="greyout">Shane Lowry +1
-+1 thru 15</td>
+      <td>Xander Schauffele E
+E thru 2</td>
+      <td class="greyout leftborder">Patrick Cantlay E
+E thru 3</td>
+      <td class="greyout">Collin Morikawa +1
++1 thru 4</td>
     </tr>
     <tr>
-      <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-4</td>
-      <td>Cameron Smith -3
--3 thru 13</td>
+      <td class="bigbold">Jon Hosegood</td>
+      <td class="bigbold">-3</td>
+      <td>Scottie Scheffler -3
+-3 thru 12</td>
       <td>Will Zalatoris -1
 -1 thru 3</td>
-      <td>Matthew Fitzpatrick E
-E thru 1</td>
-      <td>Brooks Koepka E
-E thru 1</td>
+      <td>Patrick Cantlay E
+E thru 3</td>
+      <td>Tony Finau +1
++1 thru 12</td>
       <td class="greyout leftborder">Shane Lowry +1
 +1 thru 15</td>
       <td class="greyout">Justin Thomas(W) +2
@@ -259,29 +291,13 @@ E thru 1</td>
       <td>Will Zalatoris -1
 -1 thru 3</td>
       <td>Brooks Koepka E
-E thru 1</td>
+E thru 2</td>
       <td>Collin Morikawa +1
 +1 thru 4</td>
       <td class="greyout leftborder">Tony Finau +1
 +1 thru 12</td>
       <td class="greyout">Justin Thomas(W) +2
 +2 thru 12</td>
-    </tr>
-    <tr>
-      <td class="bigbold">John Nixon</td>
-      <td class="bigbold">-3</td>
-      <td>Cameron Smith(W) -3
--3 thru 13</td>
-      <td>Brooks Koepka E
-E thru 1</td>
-      <td>Xander Schauffele E
-E thru 2</td>
-      <td>Rory McIlroy E
-E thru 1</td>
-      <td class="greyout leftborder">Patrick Cantlay E
-E thru 3</td>
-      <td class="greyout">Collin Morikawa +1
-+1 thru 4</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
@@ -291,29 +307,13 @@ E thru 3</td>
       <td>Viktor Hovland -1
 -1 thru 2</td>
       <td>Dustin Johnson -1
--1 thru 3</td>
+-1 thru 4</td>
       <td>Patrick Cantlay E
 E thru 3</td>
       <td class="greyout leftborder">Brooks Koepka E
-E thru 1</td>
-      <td class="greyout">Jon Rahm E
 E thru 2</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-2</td>
-      <td>Scottie Scheffler -2
--2 thru 10</td>
-      <td>Will Zalatoris -1
--1 thru 3</td>
-      <td>Patrick Cantlay E
+      <td class="greyout">Jon Rahm E
 E thru 3</td>
-      <td>Tony Finau +1
-+1 thru 12</td>
-      <td class="greyout leftborder">Shane Lowry +1
-+1 thru 15</td>
-      <td class="greyout">Justin Thomas(W) +2
-+2 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Adam Ryan</td>
@@ -323,7 +323,7 @@ E thru 3</td>
       <td>Corey Conners -1
 -1 thru 8</td>
       <td>Jon Rahm E
-E thru 2</td>
+E thru 3</td>
       <td>Xander Schauffele E
 E thru 2</td>
       <td class="greyout leftborder">Justin Thomas(W) +2
@@ -337,11 +337,11 @@ E thru 2</td>
       <td>Corey Conners -1
 -1 thru 8</td>
       <td>Jon Rahm E
-E thru 2</td>
+E thru 3</td>
       <td>Patrick Cantlay E
 E thru 3</td>
       <td>Tyrrell Hatton E
-E thru 4</td>
+E thru 5</td>
       <td class="greyout leftborder">Shane Lowry +1
 +1 thru 15</td>
       <td class="greyout">Justin Thomas(W) +2
@@ -351,13 +351,13 @@ E thru 4</td>
       <td class="bigbold">Jamie Watters</td>
       <td class="bigbold">-1</td>
       <td>Dustin Johnson -1
--1 thru 3</td>
+-1 thru 4</td>
       <td>Corey Conners -1
 -1 thru 8</td>
       <td>Xander Schauffele(W) E
 E thru 2</td>
       <td>Russell Henley +1
-+1 thru 7</td>
++1 thru 8</td>
       <td class="greyout leftborder">Justin Thomas +2
 +2 thru 12</td>
       <td class="greyout">Louis Oosthuizen +4
@@ -369,11 +369,11 @@ E thru 2</td>
       <td>Jordan Spieth -1
 -1 thru 2</td>
       <td>Jon Rahm(W) E
-E thru 2</td>
+E thru 3</td>
       <td>Patrick Cantlay E
 E thru 3</td>
       <td>Brooks Koepka E
-E thru 1</td>
+E thru 2</td>
       <td class="greyout leftborder">Collin Morikawa +1
 +1 thru 4</td>
       <td class="greyout">Tony Finau +1
@@ -385,9 +385,9 @@ E thru 1</td>
       <td>Viktor Hovland(W) -1
 -1 thru 2</td>
       <td>Jon Rahm E
-E thru 2</td>
+E thru 3</td>
       <td>Brooks Koepka E
-E thru 1</td>
+E thru 2</td>
       <td>Collin Morikawa +1
 +1 thru 4</td>
       <td class="greyout leftborder">Patrick Reed +2
