--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 3:27:19 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 3:28:13 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -168,8 +168,8 @@ E thru 5</td>
 -1 thru 3</td>
       <td class="greyout leftborder">Xander Schauffele E
 E thru 2</td>
-      <td class="greyout">Hideki Matsuyama +2
-+2 thru 12</td>
+      <td class="greyout">Hideki Matsuyama +1
++1 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Luke Watson</td>
@@ -233,7 +233,7 @@ E thru 3</td>
       <td class="greyout leftborder">Brooks Koepka E
 E thru 2</td>
       <td class="greyout">Shane Lowry +1
-+1 thru 15</td>
++1 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Uphill into the Wind</td>
@@ -335,7 +335,7 @@ E thru 2</td>
       <td class="bigbold">Chris Sinclair</td>
       <td class="bigbold">-6</td>
       <td>Daniel Berger -3
--3 thru 14</td>
+-3 thru 15</td>
       <td>Corey Conners(W) -1
 -1 thru 8</td>
       <td>Robert MacIntyre -1
@@ -503,7 +503,7 @@ E thru 3</td>
       <td>Brooks Koepka E
 E thru 2</td>
       <td class="greyout leftborder">Shane Lowry +1
-+1 thru 15</td>
++1 thru 16</td>
       <td class="greyout">Justin Thomas(W) +2
 +2 thru 12</td>
     </tr>
@@ -519,9 +519,9 @@ E thru 2</td>
       <td>Jon Rahm E
 E thru 3</td>
       <td class="greyout leftborder">Shane Lowry +1
-+1 thru 15</td>
-      <td class="greyout">Hideki Matsuyama +2
-+2 thru 12</td>
++1 thru 16</td>
+      <td class="greyout">Hideki Matsuyama +1
++1 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Fred Jamieson</td>
@@ -551,7 +551,7 @@ E thru 2</td>
       <td>Brooks Koepka E
 E thru 2</td>
       <td class="greyout leftborder">Shane Lowry +1
-+1 thru 15</td>
++1 thru 16</td>
       <td class="greyout">Justin Thomas(W) +2
 +2 thru 12</td>
     </tr>
@@ -568,8 +568,8 @@ E thru 2</td>
 E thru 3</td>
       <td class="greyout leftborder">Brooks Koepka E
 E thru 2</td>
-      <td class="greyout">Hideki Matsuyama +2
-+2 thru 12</td>
+      <td class="greyout">Hideki Matsuyama +1
++1 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Tom Davis</td>
@@ -583,7 +583,7 @@ E thru 2</td>
       <td>Patrick Cantlay E
 E thru 3</td>
       <td class="greyout leftborder">Shane Lowry +1
-+1 thru 15</td>
++1 thru 16</td>
       <td class="greyout">Louis Oosthuizen +4
 +4 thru 13</td>
     </tr>
@@ -598,8 +598,8 @@ E thru 3</td>
 -1 thru 13</td>
       <td>Xander Schauffele E
 E thru 2</td>
-      <td class="greyout leftborder">Hideki Matsuyama +2
-+2 thru 12</td>
+      <td class="greyout leftborder">Hideki Matsuyama +1
++1 thru 13</td>
       <td class="greyout">Justin Thomas +2
 +2 thru 12</td>
     </tr>
@@ -633,13 +633,13 @@ E thru 3</td>
       <td class="greyout leftborder">Xander Schauffele E
 E thru 2</td>
       <td class="greyout">Adam Scott +2
-+2 thru 11</td>
++2 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
       <td class="bigbold">-4</td>
       <td>Daniel Berger -3
--3 thru 14</td>
+-3 thru 15</td>
       <td>Viktor Hovland -1
 -1 thru 2</td>
       <td>Patrick Cantlay E
@@ -727,7 +727,7 @@ E thru 3</td>
       <td>Brooks Koepka E
 E thru 2</td>
       <td class="greyout leftborder">Shane Lowry +1
-+1 thru 15</td>
++1 thru 16</td>
       <td class="greyout">Justin Thomas(W) +2
 +2 thru 12</td>
     </tr>
@@ -773,7 +773,7 @@ E thru 3</td>
       <td>Viktor Hovland -1
 -1 thru 2</td>
       <td>Shane Lowry(W) +1
-+1 thru 15</td>
++1 thru 16</td>
       <td class="greyout leftborder">Sam Burns +2
 +2 thru 5</td>
       <td class="greyout">Brian Harman +2
@@ -791,7 +791,7 @@ E thru 3</td>
       <td>Tony Finau +1
 +1 thru 12</td>
       <td class="greyout leftborder">Shane Lowry +1
-+1 thru 15</td>
++1 thru 16</td>
       <td class="greyout">Justin Thomas(W) +2
 +2 thru 12</td>
     </tr>
@@ -824,6 +824,22 @@ E thru 3</td>
 E thru 3</td>
       <td class="greyout leftborder">Xander Schauffele E
 E thru 2</td>
+      <td class="greyout">Justin Thomas +2
++2 thru 12</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Bill Hunter</td>
+      <td class="bigbold">-3</td>
+      <td>Cameron Smith(W) -3
+-3 thru 13</td>
+      <td>Corey Conners -1
+-1 thru 8</td>
+      <td>Xander Schauffele E
+E thru 2</td>
+      <td>Hideki Matsuyama +1
++1 thru 13</td>
+      <td class="greyout leftborder">Marc Leishman +2
++2 thru 6</td>
       <td class="greyout">Justin Thomas +2
 +2 thru 12</td>
     </tr>
@@ -940,22 +956,6 @@ E thru 3</td>
 +3 thru 8</td>
     </tr>
     <tr>
-      <td class="bigbold">Bill Hunter</td>
-      <td class="bigbold">-2</td>
-      <td>Cameron Smith(W) -3
--3 thru 13</td>
-      <td>Corey Conners -1
--1 thru 8</td>
-      <td>Xander Schauffele E
-E thru 2</td>
-      <td>Marc Leishman +2
-+2 thru 6</td>
-      <td class="greyout leftborder">Hideki Matsuyama +2
-+2 thru 12</td>
-      <td class="greyout">Justin Thomas +2
-+2 thru 12</td>
-    </tr>
-    <tr>
       <td class="bigbold">Bryan Francis</td>
       <td class="bigbold">-2</td>
       <td>Viktor Hovland -1
@@ -999,7 +999,7 @@ E thru 2</td>
       <td>Tony Finau +1
 +1 thru 12</td>
       <td class="greyout leftborder">Shane Lowry +1
-+1 thru 15</td>
++1 thru 16</td>
       <td class="greyout">Louis Oosthuizen +4
 +4 thru 13</td>
     </tr>
@@ -1046,8 +1046,8 @@ E thru 3</td>
 E thru 3</td>
       <td>Brooks Koepka E
 E thru 2</td>
-      <td class="greyout leftborder">Hideki Matsuyama +2
-+2 thru 12</td>
+      <td class="greyout leftborder">Hideki Matsuyama +1
++1 thru 13</td>
       <td class="greyout">Justin Thomas +2
 +2 thru 12</td>
     </tr>
@@ -1078,8 +1078,8 @@ E thru 3</td>
 E thru 3</td>
       <td>Collin Morikawa(W) +1
 +1 thru 4</td>
-      <td class="greyout leftborder">Hideki Matsuyama +2
-+2 thru 12</td>
+      <td class="greyout leftborder">Hideki Matsuyama +1
++1 thru 13</td>
       <td class="greyout">Paul Casey
 Out With Injury</td>
     </tr>
