--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 3:27:19 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 3:28:13 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -166,16 +166,16 @@ E thru 2</td>
 -1 thru 2</td>
       <td>Rory McIlroy -1
 -1 thru 2</td>
-      <td class="greyout leftborder">Justin Thomas +2
+      <td class="greyout leftborder">Tommy Fleetwood(W) +2
++2 thru 15</td>
+      <td class="greyout">Justin Thomas +2
 +2 thru 12</td>
-      <td class="greyout">Tommy Fleetwood(W) +3
-+3 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
       <td class="bigbold">-6</td>
       <td>Daniel Berger -3
--3 thru 14</td>
+-3 thru 15</td>
       <td>Corey Conners(W) -1
 -1 thru 8</td>
       <td>Jordan Spieth -1
@@ -217,7 +217,7 @@ E thru 3</td>
       <td class="greyout leftborder">Brooks Koepka E
 E thru 2</td>
       <td class="greyout">Shane Lowry +1
-+1 thru 15</td>
++1 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
@@ -231,7 +231,7 @@ E thru 2</td>
       <td>Brooks Koepka E
 E thru 2</td>
       <td class="greyout leftborder">Shane Lowry +1
-+1 thru 15</td>
++1 thru 16</td>
       <td class="greyout">Justin Thomas(W) +2
 +2 thru 12</td>
     </tr>
@@ -279,7 +279,7 @@ E thru 3</td>
       <td>Tony Finau +1
 +1 thru 12</td>
       <td class="greyout leftborder">Shane Lowry +1
-+1 thru 15</td>
++1 thru 16</td>
       <td class="greyout">Justin Thomas(W) +2
 +2 thru 12</td>
     </tr>
@@ -287,7 +287,7 @@ E thru 3</td>
       <td class="bigbold">Al Shulman</td>
       <td class="bigbold">-3</td>
       <td>Daniel Berger -3
--3 thru 14</td>
+-3 thru 15</td>
       <td>Will Zalatoris -1
 -1 thru 3</td>
       <td>Brooks Koepka E
@@ -343,7 +343,7 @@ E thru 3</td>
       <td>Tyrrell Hatton E
 E thru 5</td>
       <td class="greyout leftborder">Shane Lowry +1
-+1 thru 15</td>
++1 thru 16</td>
       <td class="greyout">Justin Thomas(W) +2
 +2 thru 12</td>
     </tr>
